syntax = "proto3";

package package9;

option java_multiple_files=true;
option java_package= "com.learner.grpc_learning.proto.p9";

import "google/protobuf/empty.proto";
message BankRequest{
  int32 accountNumber=1;
}

message BankResponse{
  int32 accountNumber=1;
  int32 balance=2;
}

message BankAccounts{
  repeated BankResponse bankresponse=1;
}

message WithdrawalRequest{
  int32 account_number=1;
  int32 amount=2;
}

message WithdrawalResponse{
  int32 amount=1;
}

service BankService{
  //unary
  rpc getAccountDetails(BankRequest) returns (BankResponse);
  rpc getAccounts(google.protobuf.Empty) returns (BankAccounts);

  //server streaming
  rpc getWithdrawalAmount(WithdrawalRequest) returns (stream WithdrawalResponse);
}

